[package]
name = "jpl-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.5", default-features = false, features = ["png"] }


[lib]
crate-type = ["staticlib"]

[profile.release]
# opt-level = 's'     # Optimize for size
lto = true          # Enable link-time optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

